--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "start": "node dist/server.js"
   },
   "author": "",
+  "type": "module",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/node": "^25.2.2",
+    "@types/pg": "^8.16.0",
+    "prisma": "^7.3.0",
     "tsx": "^4.21.0"
   },
   "dependencies": {
-    "express": "^5.2.1"
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "^7.3.0",
+    "dotenv": "^17.2.4",
+    "express": "^5.2.1",
+    "pg": "^8.18.0"
   }
 }
