--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@
 
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 DATABASE_URL="postgresql://neondb_owner:npg_GyfSK6VXOC7P@ep-bold-mode-aiy0i9xl-pooler.c-4.us-east-1.aws.neon.tech:5432/neondb?sslmode=require&channel_binding=require"
+
+BETTER_AUTH_SECRET=wen2wLyTxVdUvFtlX5isbBkzNI73fhEA
+BETTER_AUTH_URL=http://localhost:3000 # Backend URL of my app
