--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
   "description": "",
   "devDependencies": {
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.2.2",
     "@types/pg": "^8.16.0",
-    "prisma": "^7.3.0",
+    "prisma": "^7.4.0",
     "tsx": "^4.21.0"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.3.0",
-    "@prisma/client": "^7.3.0",
+    "@prisma/client": "^7.4.0",
+    "@types/ms": "^2.1.0",
     "better-auth": "^1.4.18",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "http-status": "^2.1.0",
+    "jsonwebtoken": "^9.0.3",
+    "ms": "^2.1.3",
     "pg": "^8.18.0",
     "zod": "^4.3.6"
   }
